test/compile-fail/invalid-expr.rs
fn a() -> int {
    retur 0  //! ERROR(2:11): expected `}`, found `0`
}